examples/good/09-BlockCover.tms
void main() {

  int x = 0;
  {
    int x = 1;
    {
      int x = 2;
      printInt(x);
    }
    printInt(x);
  }
  printInt(x);
  printBool(x == 0);

  return;
}