examples/bad/13-WrongFunctionShadowing.tms
void main() {
  int x = 1;
  
  void main(int x) {
    printBool(x == 2);
    return;
  }
  
  main(2);
  return;
}